fix(modal,sidebar): make sure the reserved scrollbarwidth margin has same background color as body

--- a/src/definitions/modules/dimmer.less
+++ b/src/definitions/modules/dimmer.less
@@ -150,6 +150,7 @@
 body.animating.in.dimmable,
 body.dimmed.dimmable {
   overflow: hidden;
+  background:inherit;
 }
 
 body.dimmable > .dimmer {
