--- a/src/definitions/modules/sidebar.less
+++ b/src/definitions/modules/sidebar.less
@@ -94,7 +94,7 @@
 
 /* Whole Page */
 body.pushable {
-  background: @canvasBackground !important;
+  background: @canvasBackground;
 }
 
 /* Page Context */
